--- a/swolfpy/UI/MC.ui
+++ b/swolfpy/UI/MC.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>788</width>
-    <height>589</height>
+    <width>1180</width>
+    <height>1068</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -53,9 +53,9 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-286</y>
-            <width>731</width>
-            <height>918</height>
+            <y>0</y>
+            <width>1136</width>
+            <height>998</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_6">
@@ -88,7 +88,66 @@
                    <string>Plot</string>
                   </property>
                   <layout class="QGridLayout" name="gridLayout_3">
-                   <item row="3" column="5">
+                   <item row="1" column="3">
+                    <widget class="QLabel" name="label_3">
+                     <property name="text">
+                      <string>Plot type</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="1" column="5">
+                    <widget class="QRadioButton" name="hexbin">
+                     <property name="text">
+                      <string>hexbin</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="1" column="1">
+                    <widget class="QComboBox" name="y_axis">
+                     <property name="minimumSize">
+                      <size>
+                       <width>400</width>
+                       <height>0</height>
+                      </size>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="1" column="4">
+                    <widget class="QRadioButton" name="scatter">
+                     <property name="text">
+                      <string>scatter</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="0" column="1">
+                    <widget class="QComboBox" name="x_axis"/>
+                   </item>
+                   <item row="0" column="0">
+                    <widget class="QLabel" name="label">
+                     <property name="text">
+                      <string>X axis</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="1" column="6">
+                    <widget class="QPushButton" name="Update_plot">
+                     <property name="text">
+                      <string>Update</string>
+                     </property>
+                     <property name="icon">
+                      <iconset resource="PyWOLF_Resource.qrc">
+                       <normaloff>:/ICONS/PySWOLF_ICONS/Update.png</normaloff>:/ICONS/PySWOLF_ICONS/Update.png</iconset>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="1" column="0">
+                    <widget class="QLabel" name="label_2">
+                     <property name="text">
+                      <string>Y axis</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="1" column="7">
                     <spacer name="horizontalSpacer">
                      <property name="orientation">
                       <enum>Qt::Horizontal</enum>
@@ -101,21 +160,7 @@
                      </property>
                     </spacer>
                    </item>
-                   <item row="0" column="0">
-                    <widget class="QLabel" name="label">
-                     <property name="text">
-                      <string>X axis</string>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="3" column="0">
-                    <widget class="QLabel" name="label_3">
-                     <property name="text">
-                      <string>Plot type</string>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="4" column="0" colspan="6">
+                   <item row="2" column="0" colspan="8">
                     <widget class="QWidget" name="plot" native="true">
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -131,44 +176,6 @@
                      </property>
                     </widget>
                    </item>
-                   <item row="3" column="3">
-                    <widget class="QRadioButton" name="hexbin">
-                     <property name="text">
-                      <string>hexbin</string>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="3" column="1">
-                    <widget class="QRadioButton" name="scatter">
-                     <property name="text">
-                      <string>scatter</string>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="1" column="0" rowspan="2">
-                    <widget class="QLabel" name="label_2">
-                     <property name="text">
-                      <string>Y axis</string>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="3" column="4">
-                    <widget class="QPushButton" name="Update_plot">
-                     <property name="text">
-                      <string>Update</string>
-                     </property>
-                     <property name="icon">
-                      <iconset resource="PyWOLF_Resource.qrc">
-                       <normaloff>:/ICONS/PySWOLF_ICONS/Update.png</normaloff>:/ICONS/PySWOLF_ICONS/Update.png</iconset>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="1" column="1" colspan="4">
-                    <widget class="QComboBox" name="y_axis"/>
-                   </item>
-                   <item row="0" column="1" colspan="4">
-                    <widget class="QComboBox" name="x_axis"/>
-                   </item>
                   </layout>
                  </widget>
                  <widget class="QGroupBox" name="groupBox_2">
@@ -176,17 +183,6 @@
                    <string>Distribution</string>
                   </property>
                   <layout class="QGridLayout" name="gridLayout_4">
-                   <item row="0" column="4" rowspan="2">
-                    <widget class="QPushButton" name="Update_dist_fig">
-                     <property name="text">
-                      <string>Update</string>
-                     </property>
-                     <property name="icon">
-                      <iconset resource="PyWOLF_Resource.qrc">
-                       <normaloff>:/ICONS/PySWOLF_ICONS/Update.png</normaloff>:/ICONS/PySWOLF_ICONS/Update.png</iconset>
-                     </property>
-                    </widget>
-                   </item>
                    <item row="1" column="0" rowspan="2">
                     <widget class="QLabel" name="label_4">
                      <property name="text">
@@ -225,6 +221,12 @@
                        <verstretch>0</verstretch>
                       </sizepolicy>
                      </property>
+                     <property name="minimumSize">
+                      <size>
+                       <width>400</width>
+                       <height>0</height>
+                      </size>
+                     </property>
                     </widget>
                    </item>
                    <item row="2" column="1">
@@ -247,6 +249,30 @@
                       <string>density</string>
                      </property>
                     </widget>
+                   </item>
+                   <item row="2" column="4">
+                    <widget class="QPushButton" name="Update_dist_fig">
+                     <property name="text">
+                      <string>Update</string>
+                     </property>
+                     <property name="icon">
+                      <iconset resource="PyWOLF_Resource.qrc">
+                       <normaloff>:/ICONS/PySWOLF_ICONS/Update.png</normaloff>:/ICONS/PySWOLF_ICONS/Update.png</iconset>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="2" column="5">
+                    <spacer name="horizontalSpacer_2">
+                     <property name="orientation">
+                      <enum>Qt::Horizontal</enum>
+                     </property>
+                     <property name="sizeHint" stdset="0">
+                      <size>
+                       <width>40</width>
+                       <height>20</height>
+                      </size>
+                     </property>
+                    </spacer>
                    </item>
                   </layout>
                  </widget>
