--- a/swolfpy/UI/adv_opt.ui
+++ b/swolfpy/UI/adv_opt.ui
@@ -36,6 +36,49 @@
       <string>Options</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="1" column="2">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Number of theads</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="nproc"/>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Initial guess</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QComboBox" name="method"/>
+      </item>
+      <item row="2" column="1">
+       <widget class="QSpinBox" name="Opt_trial"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QCheckBox" name="Multi_start_opt">
+        <property name="text">
+         <string>Multi_start</string>
+        </property>
+       </widget>
+      </item>
       <item row="0" column="0" colspan="2">
        <widget class="QCheckBox" name="Opt_incld_flows">
         <property name="text">
@@ -50,28 +93,15 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="2">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="2" column="0">
-       <widget class="QCheckBox" name="Multi_start_opt">
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Multi_start</string>
+         <string>Timeout</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="QSpinBox" name="Opt_trial"/>
+      <item row="5" column="1">
+       <widget class="QSpinBox" name="timeout"/>
       </item>
      </layout>
     </widget>
